--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -5,13 +5,55 @@
     {% load static %}
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 {% endblock %}
 
 {% block content %}
-    <h1>Dashboard</h1>
-    <p>Welcome to your dashboard.</p>
-    {% block form %}
+    <div class="project-choose">
+        <div class="button-group" role="group">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon-file" aria-hidden="true"></span> New</button>
+    
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header"> Create a new project </div>
+                        <form class="form-horizontal" action="{% url 'init' %}" method="get"> {{ form.as_p }} {% csrf_token %}
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label for="inputName" class="col-sm-2 control-label">Name</label>
+                                    <div class="col-sm-10">
+                                        <input id="inputName" type="text" class="form-control list-inline" placeholder="Name" required/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputdes" class="col-sm-2 control-label">Description</label>
+                                    <div class="col-sm-10">
+                                        <input id="inputdes" type="text" class="form-control list-inline" placeholder="Description" required/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <input data-toggle="modal" class="btn btn-success" type="submit"></input>
+                                <button class="btn btn-outline-danger btn-lg" data-dismiss="modal">Cancel</button>
+                            </div>
+                        </form>
+                        
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
+        </div>
+    <div class="project">
+        <div class="title">Project</div>
+        <div id="txt"></div>
+    </div>
+    {% comment %} {% block form %}
     <form action="{% url 'init' %}" method="get"> {{ form.as_p }} {% csrf_token %}
             {% ifequal executed 'done' %}
                 <a href="127.0.0.1:8888" target="view_window">打开notebook</a>
@@ -19,7 +61,7 @@
             <button type="commit" class="btn btn-primary btn-lg " id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Processing Order">初始化</button>
             {% endifequal %}
         </form>
-    {% endblock %}
+    {% endblock %} {% endcomment %}
 {% endblock %}
 <!--
 <script>
