--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -5,27 +5,85 @@
 {% block head %}
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet"> </head>
+    <link href="{% static 'css/base.css' %}" rel="stylesheet"> 
+</head>
 {% endblock %}
 <body>
     <div id="header">
         <span class="logo">DLUT Tensorflow Deep Learning </span> {% if request.user.is_authenticated %}
         <ul class="menu">
             <li {% ifequal section "dashboard" %}class="selected" {% endifequal %}>
-                <a href="{% url "dashboard" %}">My dashboard</a>
             </li>
             <li {% ifequal section  "images" %}class="selected" {% endifequal %}>
-                <a href="#">Images</a>
             </li>
             <li {% ifequal section "people" %}class="selected" {% endifequal %}>
-                <a href="#">People</a>
             </li>
         </ul> {% endif %}
         <span class="user"> {% if request.user.is_authenticated %} Hello {{ request.user.first_name }},
             <a href="{% url "logout" %}">Logout</a> {% else %}
             <a href="{% url "login" %}">Log-in</a> {% endif %} </span>
     </div>
-    <div id="content"> {% block content %} {% endblock %} </div>
+    <div id="content"> 
+        {% block content %}
+        <div class="form">
+        {% block form %} 
+        {% endblock %} 
+        </div>
+        {% endblock %} </div>
 </body>
 
 </html>
+
+{% comment %} <style>
+    .project-choose {
+        height: 56px;
+    }
+
+    .project {
+        position: absolute;
+        top: 80px;
+        left: 250px;
+        width: 179px;
+        height: 100%;
+        background: #96df94;
+    }
+
+    .button {
+        display: block;
+        float: left;
+        position: relative;
+        height: 46px;
+        width: 80px;
+        margin: 5px 10px 18px 0;
+
+        text-decoration: none;
+        font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-weight: bold;
+        line-height: 25px;
+        text-align: center;
+    }
+
+    .button-group {
+        margin-left: 377px;
+        margin-right: 189px;
+        height: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .button-default {
+        color: #555555;
+        border-bottom: 4px solid #b2b1b1;
+        background: #e2e2e2;
+    }
+
+    .title {
+        height: 50px;
+        text-align: center;
+        font-size: 18px;
+        color: #ffffff;
+        letter-spacing: 0;
+        line-height: 50px;
+        border-bottom: 1px solid #333C51;
+    }
+</style> {% endcomment %}
