change  init_kubeflow button value

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <input data-toggle="modal" class="btn btn-success" type="submit" name="init_kubeflow"></input>
+                                <input data-toggle="modal" class="btn btn-success" type="submit" name="init_kubeflow" value="Done!"></input>
                                 <button class="btn btn-outline-danger btn-lg" data-dismiss="modal">Cancel</button>
                             </div>
                         </form>
